@@ -83,6 +83,7 @@ S3method(makeRLearner,classif.plsdaCaret)
 S3method(makeRLearner,classif.probit)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
+S3method(makeRLearner,classif.rFerns)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
@@ -218,6 +219,7 @@ S3method(predictLearner,classif.plsdaCaret)
 S3method(predictLearner,classif.probit)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
+S3method(predictLearner,classif.rFerns)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
@@ -393,6 +395,7 @@ S3method(trainLearner,classif.plsdaCaret)
 S3method(trainLearner,classif.probit)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
+S3method(trainLearner,classif.rFerns)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
