@@ -18,6 +18,7 @@ mlr_2.4:
 
 - new learners:
 -- classif.nodeHarvest
+-- classif.rFerns
 -- classif.wsrf
 -- regr.nodeHarvest
 
